<resources>
    <string name="app_name">Expense Management</string>
    <string name="cancel">Cancel</string>
    <string name="login">Login</string>
    <string name="please_enter_your_password">Please enter your password</string>
    <string name="password">Password</string>
    <string name="admin">Admin</string>
    <string name="sign_up">Sign Up</string>
    <string name="your_email">Your Email</string>
    <string name="please_enter_your_name">Please enter your name....</string>
    <string name="please_enter_your_email">Please enter your email....</string>
    <string name="phonenumber">Please enter your phonenumber....</string>
    <string name="your_password">Your Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="have_an_account">Have an account?</string>
    <string name="sign_in">Sign In</string>
    <string name="register">Register</string>
    <string name="haven_t_an_account">Haven\'t an account?</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_add">Add</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="hi_jasmine">Hi, Jasmine</string>
    <string name="welcome_back">Welcome back</string>
    <string name="edit_profile">My Profile</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="menu_profile">Profile</string>
    <string name="add">Add</string>
    <string name="income">Income</string>
    <string name="expenses">Expenses</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_notifications">Notifications</string>
    <string name="full_name">Full Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <string name="status">Status</string>
    <string name="edit">Edit</string>
    <string name="my_profile">My Profile</string>
    <string name="month">Month</string>
    <string name="remaining">Remaining</string>
    <string name="your_fullname">Your FullName</string>
    <string name="your_phone">Your Phone</string>
    <string name="back">Back</string>
    <string name="save">Save</string>
    <string name="your_income_in">Income In:</string>
    <string name="history_income">History Income</string>
    <string name="income_amount">Income Amount</string>
    <string name="create_at">Create At</string>
    <string name="month_2_2025">Month: 2/2025</string>
    <string name="item">\n</string>
    <string name="s_ti_n_chi">Số tiền đã chi</string>
    <string name="thu_nh_p">Thu nhập</string>
    <string name="th_ng">Tháng:</string>
    <string name="t_ng_thu_nh_p">Tổng thu nhập:</string>
    <string name="chi_ti_u">Chi tiêu</string>
    <string name="t_ng_chi_ti_u">Tổng chi tiêu:</string>
    <string name="th_m">Thêm</string>
    <string name="th_m_thu_nh_p_m_i">Thêm thu nhập mới</string>
    <string name="kho_n_chi">Khoản chi</string>
    <string name="nh_p_thu_nh_p">Nhập thu nhập</string>
    <string name="nh_p_s_ti_n">Nhập số tiền</string>
    <string name="date_time">📅</string>
    <string name="nh_p_ghi_ch">Nhập ghi chú</string>
    <string name="th_m_kho_n_chi_m_i">Thêm khoản chi mới</string>
    <string name="income_highest_in_year">Income Highest In Year</string>
    <string name="expense_highest_in_month">Expense Highest In Month</string>
    <string name="kho_n_chi_ti_u">Khoản chi tiêu</string>
    <string name="s_ti_n_ti_u">Số tiền đã tiêu:</string>
    <string name="ng_y">Ngày:</string>
    <string name="ghi_ch">Ghi chú:</string>
    <string-array name="months">
        <item>Tháng 1</item>
        <item>Tháng 2</item>
        <item>Tháng 3</item>
        <item>Tháng 4</item>
        <item>Tháng 5</item>
        <item>Tháng 6</item>
        <item>Tháng 7</item>
        <item>Tháng 8</item>
        <item>Tháng 9</item>
        <item>Tháng 10</item>
        <item>Tháng 11</item>
        <item>Tháng 12</item>
    </string-array>
    <string-array name="years">
        <item>2024</item>
        <item>2025</item>
        <item>2026</item>
        <item>2027</item>
        <item>2028</item>
        <item>2029</item>
    </string-array>
</resources>