<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navHome"
        android:icon="@drawable/baseline_home_24"
        android:title="@string/home" />
    <item
        android:id="@+id/navProfile"
        android:icon="@drawable/baseline_person_24"
        android:title="@string/menu_profile" />
    <item
        android:id="@+id/navAdd"
        android:icon="@drawable/baseline_add_circle_24"
        android:title="@string/add" />
    <item
        android:id="@+id/navIncome"
        android:icon="@drawable/baseline_account_balance_wallet_24"
        android:title="@string/income" />
    <item
        android:id="@+id/navExpense"
        android:icon="@drawable/baseline_add_business_24"
        android:title="@string/expenses" />
</menu>

