<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/grey"
    tools:context=".ExpenseManager.SignUpActivity">
    <ImageView
        android:layout_marginTop="40dp"
        android:id="@+id/imgAvatar"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center"
        android:scaleType="centerCrop"
        android:src="@drawable/baseline_account_circle_24" />
    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textAlignment="center"
        android:fontFamily="serif"
        android:textStyle="italic"
        android:textSize="30sp"
        android:textColor="@color/black"
        />
    <TextView
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:textStyle="italic"
        android:textSize="15sp"
        android:text="@string/your_fullname"
        android:textColor="@color/black"
        />

    <EditText
        android:id="@+id/edtFullName"
        android:layout_width="353dp"
        android:layout_height="45dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:fontFamily="serif"
        android:hint="@string/please_enter_your_name"
        android:inputType="text"
        android:textColor="@color/black"
        android:textSize="19sp"
        android:textStyle="italic" />
    <TextView
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:textStyle="italic"
        android:textSize="15sp"
        android:text="@string/your_phone"
        android:textColor="@color/black"
        />
    <EditText
        android:id="@+id/edtPhoneNumber"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:minHeight="48dp"
        android:minWidth="48dp"
        android:fontFamily="serif"
        android:textStyle="italic"
        android:textSize="19sp"
        android:inputType="phone"
        android:textColor="@color/black"
        android:hint="@string/phonenumber"
        />
    <TextView
        android:layout_marginLeft="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:textStyle="italic"
        android:textSize="15sp"
        android:text="@string/your_email"
        android:textColor="@color/black"
     />
    <EditText
        android:id="@+id/edtEmail"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:minHeight="48dp"
        android:minWidth="48dp"
        android:fontFamily="serif"
        android:textStyle="italic"
        android:textSize="19sp"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        android:hint="@string/please_enter_your_email"
        />
    <TextView
        android:layout_marginLeft="17dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:textStyle="italic"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:text="@string/your_password"
        />
    <EditText
        android:id="@+id/edtPassword"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:minHeight="48dp"
        android:minWidth="48dp"
        android:fontFamily="serif"
        android:textStyle="italic"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:inputType="textPassword"
        android:hint="@string/please_enter_your_password"
        />
    <TextView
        android:layout_marginLeft="18dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:textStyle="italic"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:text="@string/confirm_password"
        />
    <EditText
        android:id="@+id/edtCfPassword"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:minHeight="48dp"
        android:minWidth="48dp"
        android:fontFamily="serif"
        android:textStyle="italic"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:hint="@string/confirm_password"
        />
    <LinearLayout
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >
        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/have_an_account" />
        <TextView
            android:id="@+id/tvSignIn"
            android:layout_marginLeft="2dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:textStyle="italic"
            android:textColor="#3399ff"
            />
    </LinearLayout>
</LinearLayout>