<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/grey"
    android:textColor="@color/black"
    tools:context=".ExpenseManager.SignInActivity">
    <ImageView
        android:layout_marginTop="120dp"
        android:id="@+id/imgAvatar"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center"
        android:scaleType="centerCrop"
        android:src="@drawable/baseline_account_circle_24" />
    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:textAlignment="center"
        android:fontFamily="serif"
        android:textStyle="italic"
        android:textSize="30sp"
        android:textColor="@color/black"
        />
    <TextView
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:textStyle="italic"
        android:textSize="20sp"
        android:text="@string/your_email"
        android:textColor="@color/black"
        />
    <EditText
        android:id ="@+id/txtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:minWidth="48dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="30dp"
        android:fontFamily="serif"
        android:textStyle="italic"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:inputType="textEmailAddress"
        android:hint="@string/please_enter_your_email"
        />
    <TextView
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:textStyle="italic"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:text="@string/your_password"
        />
    <EditText
        android:id ="@+id/txtPassword"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:minWidth="48dp"
        android:fontFamily="serif"
        android:textStyle="italic"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:inputType="textPassword"
        android:hint="@string/please_enter_your_password"
        />

    <LinearLayout
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >
        <Button
            android:id="@+id/btnSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/haven_t_an_account" />
        <TextView
            android:id="@+id/tvSignUp"
            android:layout_marginLeft="2dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textStyle="italic"
            android:textColor="#3399ff"
            />
    </LinearLayout>
</LinearLayout>