<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="2dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="2dp">

        <TextView
            android:id="@+id/txtAmountDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/s_ti_n_ti_u"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp"
        >
        <TextView
            android:id="@+id/txtDateDetal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ng_y"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp"
        >
        <TextView
            android:id="@+id/txtDescriptionDetail"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:text="@string/ghi_ch"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"/>
    </LinearLayout>
</LinearLayout>