<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/navProfile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ExpenseManager.ProfileFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:gravity="top"
        android:padding="16dp"
        tools:context=".ProfileFragment">


        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/my_profile"
            android:textAlignment="center"
            android:fontFamily="serif"
            android:textStyle="italic"
            android:textColor="@color/black"
            android:textSize="30sp"
        />
        <!-- Ảnh đại diện -->

        <!-- Full Name -->
        <ImageView
            android:id="@+id/imgAvatar"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:scaleType="centerCrop"
            android:src="@drawable/baseline_person_24" />
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/full_name"
            android:fontFamily="serif"
            android:textStyle="italic"
            android:textColor="@color/black"
            android:textSize="19sp"

            />
        <EditText
            android:id="@+id/edtFullName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/full_name"
            android:textSize="16sp"
            android:padding="10dp"
            android:background="@android:drawable/editbox_background"
            android:enabled="false"
            android:inputType="text"/>

        <!-- Phone Number -->
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/phone_number"
            android:fontFamily="serif"
            android:textStyle="italic"
            android:textColor="@color/black"
            android:textSize="19sp"
            />
        <EditText
            android:id="@+id/edtPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_number"
            android:textSize="16sp"
            android:padding="10dp"
            android:background="@android:drawable/editbox_background"
            android:enabled="false"
            android:inputType="phone"/>

        <!-- Email -->
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:fontFamily="serif"
            android:textStyle="italic"
            android:textColor="@color/black"
            android:textSize="19sp"
            />

        <EditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:textSize="16sp"
            android:padding="10dp"
            android:background="@android:drawable/editbox_background"
            android:enabled="false"
            android:inputType="textEmailAddress"/>
        <!-- Password -->
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:fontFamily="serif"
            android:textStyle="italic"
            android:textColor="@color/black"
            android:textSize="19sp"
            />

        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textSize="16sp"
            android:padding="10dp"
            android:background="@android:drawable/editbox_background"
            android:enabled="false"
            android:inputType="textPassword"/>
        <TextView
            android:id="@+id/tvCfPassword"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Confirm Password"
            android:fontFamily="serif"
            android:textStyle="italic"
            android:textColor="@color/black"
            android:visibility="gone"
            android:textSize="19sp"
            />
        <EditText
            android:id="@+id/edtCfPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textSize="16sp"
            android:padding="10dp"
            android:background="@android:drawable/editbox_background"
            android:visibility="gone"
            android:inputType="textPassword"
            android:enabled="true"/>
        <!-- Status -->
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/status"
            android:fontFamily="serif"
            android:textStyle="italic"
            android:textColor="@color/black"
            android:textSize="19sp"
        />
        <EditText
            android:id="@+id/edtStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/status"
            android:textSize="16sp"
            android:padding="10dp"
            android:background="@android:drawable/editbox_background"
            android:focusable="false"
            android:clickable="false"
            android:longClickable="false"
            android:inputType="text"
            android:enabled="false"/>

        <!-- Buttons -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="20dp">

            <Button
                android:id="@+id/btnEdit"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/edit"
                android:background="@color/bluelight"
                android:cursorVisible="true"
                android:visibility="invisible"
                android:layout_margin="5dp"
                />
            <Button
                android:id="@+id/btnSave"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:background="@color/bluelight"
                android:cursorVisible="true"
                android:visibility="invisible"
                android:layout_margin="5dp"
                />
            <Button
                android:id="@+id/btnBack"
                android:layout_margin="5dp"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/back"
                android:visibility="visible"
                android:background="@color/bluelight"
                />
        </LinearLayout>

    </LinearLayout>

</FrameLayout>